[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/HudTopLeftPort.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Hud.gd" type="Script" id=2]
[ext_resource path="res://sprites/hud_health_bar_over.png" type="Texture" id=3]
[ext_resource path="res://sprites/hud_health_bar_under.png" type="Texture" id=4]
[ext_resource path="res://resources/Aquarius-RegularMono.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://sprites/hud_health_bar_background.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[node name="Hud" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="TopLeftContainerBoarder" type="ColorRect" parent="."]
margin_right = 160.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="TopLeftContainerBoarder"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 2
custom_constants/margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="TopLeftContainerBoarder/MarginContainer"]
margin_right = 158.0
margin_bottom = 126.0

[node name="MarginContainer" type="MarginContainer" parent="TopLeftContainerBoarder/MarginContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="TopLeftContainerBoarder/MarginContainer/ColorRect/MarginContainer"]
margin_right = 153.0
margin_bottom = 121.0
color = Color( 0, 0, 0, 1 )

[node name="MarginContainer" type="MarginContainer" parent="TopLeftContainerBoarder/MarginContainer/ColorRect/MarginContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 2
custom_constants/margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="TopLeftContainerBoarder/MarginContainer/ColorRect/MarginContainer/ColorRect/MarginContainer"]
margin_right = 151.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0.392157, 0.470588, 1 )

[node name="TopLeftViewportContainer" type="ViewportContainer" parent="TopLeftContainerBoarder/MarginContainer/ColorRect/MarginContainer/ColorRect/MarginContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="TopLeftContainerBoarder/MarginContainer/ColorRect/MarginContainer/ColorRect/MarginContainer/ColorRect/TopLeftViewportContainer"]
size = Vector2( 151, 1 )
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="TopLeftContainerBoarder/MarginContainer/ColorRect/MarginContainer/ColorRect/MarginContainer/ColorRect/TopLeftViewportContainer/Viewport"]
anchor_mode = 0
current = true

[node name="HudTopLeftPort" parent="TopLeftContainerBoarder/MarginContainer/ColorRect/MarginContainer/ColorRect/MarginContainer/ColorRect/TopLeftViewportContainer/Viewport" instance=ExtResource( 1 )]

[node name="BottomContainerBoarder" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -34.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="BottomContainerBoarder"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="BottomContainerBoarder/MarginContainer"]
margin_top = 2.0
margin_right = 960.0
margin_bottom = 34.0

[node name="MarginContainer" type="MarginContainer" parent="BottomContainerBoarder/MarginContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="BottomContainerBoarder/MarginContainer/ColorRect/MarginContainer"]
margin_top = 5.0
margin_right = 960.0
margin_bottom = 32.0
color = Color( 0, 0, 0, 1 )

[node name="MarginContainer" type="MarginContainer" parent="BottomContainerBoarder/MarginContainer/ColorRect/MarginContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="BottomContainerBoarder/MarginContainer/ColorRect/MarginContainer/ColorRect/MarginContainer"]
margin_top = 2.0
margin_right = 960.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0.392157, 0.470588, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="BottomContainerBoarder/MarginContainer/ColorRect/MarginContainer/ColorRect/MarginContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabelMarginContainer" type="MarginContainer" parent="BottomContainerBoarder/MarginContainer/ColorRect/MarginContainer/ColorRect/MarginContainer/ColorRect/HBoxContainer"]
margin_left = 342.0
margin_right = 445.0
margin_bottom = 25.0
custom_constants/margin_left = 5

[node name="HealthLabel" type="Label" parent="BottomContainerBoarder/MarginContainer/ColorRect/MarginContainer/ColorRect/MarginContainer/ColorRect/HBoxContainer/HealthLabelMarginContainer"]
margin_left = 5.0
margin_right = 103.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
text = "0000.00"

[node name="HealthBarMarginContainer" type="MarginContainer" parent="BottomContainerBoarder/MarginContainer/ColorRect/MarginContainer/ColorRect/MarginContainer/ColorRect/HBoxContainer"]
margin_left = 449.0
margin_right = 617.0
margin_bottom = 25.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="HealthTextureProgUnder" type="TextureProgress" parent="BottomContainerBoarder/MarginContainer/ColorRect/MarginContainer/ColorRect/MarginContainer/ColorRect/HBoxContainer/HealthBarMarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 163.0
margin_bottom = 20.0
value = 100.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 4 )

[node name="HealthTextureProgOver" type="TextureProgress" parent="BottomContainerBoarder/MarginContainer/ColorRect/MarginContainer/ColorRect/MarginContainer/ColorRect/HBoxContainer/HealthBarMarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 163.0
margin_bottom = 20.0
value = 100.0
texture_progress = ExtResource( 3 )

[node name="HealthTextureProgUnderTween" type="Tween" parent="BottomContainerBoarder/MarginContainer/ColorRect/MarginContainer/ColorRect/MarginContainer/ColorRect/HBoxContainer/HealthBarMarginContainer"]
